feat(completions): update ya yazi

--- a/completions/ya/language/zh-CN.json
+++ b/completions/ya/language/zh-CN.json
@@ -10,63 +10,63 @@
       "name": "emit",
       "tip": [
         "U: emit <NAME> [ARGS]...",
-        "Emit a command to be executed by the current instance"
+        "发出一条要由当前实例执行的命令"
       ]
     },
     {
       "name": "emit-to",
       "tip": [
         "U: emit-to <RECEIVER> <NAME> [ARGS]...",
-        "Emit a command to be executed by the specified instance"
+        "发出一条要由指定实例执行的命令"
       ]
     },
     {
       "name": "help",
       "tip": [
-        "Print this message or the help of the given subcommand(s)"
+        "打印此消息或给定子命令的帮助"
       ]
     },
     {
       "name": "pkg",
       "tip": [
-        "Manage packages"
+        "管理包"
       ],
       "next": [
         {
           "name": "add",
           "tip": [
-            "Add packages"
+            "添加包"
           ]
         },
         {
           "name": "delete",
           "tip": [
-            "Delete packages"
+            "删除包"
           ],
           "next": []
         },
         {
           "name": "help",
           "tip": [
-            "Print this message or the help of the given subcommand(s)"
+            "打印此消息或给定子命令的帮助"
           ]
         },
         {
           "name": "install",
           "tip": [
-            "Install all packages"
+            "安装所有包"
           ]
         },
         {
           "name": "list",
           "tip": [
-            "List all packages"
+            "列出所有包"
           ]
         },
         {
           "name": "upgrade",
           "tip": [
-            "Upgrade all packages"
+            "升级所有包"
           ],
           "next": []
         }
@@ -76,21 +76,21 @@
       "name": "pub",
       "tip": [
         "U: pub [OPTIONS] <KIND>",
-        "Publish a message to the current instance"
+        "发布一条消息到当前实例"
       ],
       "options": [
         {
           "name": "--json",
           "tip": [
             "U: --json <JSON>",
-            "Send the message with a JSON body"
+            "发送 JSON 格式的消息体"
           ]
         },
         {
           "name": "--list",
           "tip": [
             "U: --list [<LIST>...]",
-            "Send the message as a list of strings"
+            "发送字符串列表作为消息体"
           ],
           "next": 0
         },
@@ -98,7 +98,7 @@
           "name": "--str",
           "tip": [
             "U: --str <STR>",
-            "Send the message with a string body"
+            "发送字符串作为消息体"
           ],
           "next": 0
         }
@@ -108,21 +108,21 @@
       "name": "pub-to",
       "tip": [
         "U: pub-to [OPTIONS] <RECEIVER> <KIND>",
-        "Publish a message to the specified instance"
+        "发布一条消息到指定实例"
       ],
       "options": [
         {
           "name": "--json",
           "tip": [
             "U: --json <JSON>",
-            "Send the message with a JSON body"
+            "发送 JSON 格式的消息体"
           ]
         },
         {
           "name": "--list",
           "tip": [
             "U: --list [<LIST>...]",
-            "Send the message as a list of strings"
+            "发送字符串列表作为消息体"
           ],
           "next": 0
         },
@@ -130,7 +130,7 @@
           "name": "--str",
           "tip": [
             "U: --str <STR>",
-            "Send the message with a string body"
+            "发送字符串作为消息体"
           ],
           "next": 0
         }
@@ -140,7 +140,7 @@
       "name": "sub",
       "tip": [
         "U: sub <KINDS>",
-        "Subscribe to messages from all remote instances"
+        "订阅所有远程实例的消息"
       ]
     }
   ],
