--- a/completions/yazi/language/zh-CN.json
+++ b/completions/yazi/language/zh-CN.json
@@ -21,21 +21,21 @@
       "name": "--chooser-file",
       "tip": [
         "U: --chooser-file <CHOOSER_FILE>",
-        "Write the selected files to this file on open fired"
+        "在打开事件触发时将选中的文件写入此文件"
       ],
       "next": 0
     },
     {
       "name": "--clear-cache",
       "tip": [
-        "Clear the cache directory"
+        "清除缓存目录"
       ]
     },
     {
       "name": "--client-id",
       "tip": [
         "U: --client-id <CLIENT_ID>",
-        "Use the specified client ID, must be a globally unique number"
+        "使用指定的客户端 ID，必须是全局唯一的数字"
       ],
       "next": 0
     },
@@ -43,14 +43,14 @@
       "name": "--cwd-file",
       "tip": [
         "U: --cwd-file <CWD_FILE>",
-        "Write the cwd on exit to this file"
+        "在退出时将当前工作目录写入此文件"
       ],
       "next": 0
     },
     {
       "name": "--debug",
       "tip": [
-        "Print debug information"
+        "打印调试信息"
       ]
     },
     {
@@ -66,7 +66,7 @@
       "name": "--local-events",
       "tip": [
         "U: --local-events <LOCAL_EVENTS>",
-        "Report the specified local events to stdout"
+        "将指定的本地事件报告到标准输出"
       ],
       "next": 0
     },
@@ -74,7 +74,7 @@
       "name": "--remote-events",
       "tip": [
         "U: --remote-events <REMOTE_EVENTS>",
-        "Report the specified remote events to stdout"
+        "将指定的远程事件报告到标准输出"
       ],
       "next": 0
     }
