feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -218,6 +218,14 @@
       ]
     },
     {
+      "name": "info",
+      "tip": [
+        "Get completion information. (one or more)",
+        "{{ $info.info.example }}"
+      ],
+      "next": []
+    },
+    {
       "name": "list",
       "tip": [
         "Display the completions that have been added.",
@@ -2176,7 +2184,7 @@
         "min": [
           "<@Yellow>",
           "You should continue entering the completion name you want to add.\n",
-          "You can enter more names, separated by spaces."
+          "You can enter more names, and they will be returned in sequence."
         ],
         "no": [
           "<@Red>Completion <@Magenta>{{ $completion }}<@Red> does not exist in the completions list.\n",
@@ -2422,6 +2430,20 @@
         "<@Red>It contains wildcard characters."
       ]
     },
+    "info": {
+      "err": {
+        "min": [
+          "<@Yellow>",
+          "You should continue to enter the name of the completion you want to get info for.\n",
+          "You can enter more names, and they will be returned in sequence."
+        ]
+      },
+      "example": [
+        "E: psc info git           --- Get the information of git\n",
+        "   psc info git scoop     --- Get the information of git and scoop"
+      ],
+      "tip": "Get completion information: {{ $completion }}"
+    },
     "list": {
       "added": "Added",
       "example": [
@@ -2594,7 +2616,7 @@
         "min": [
           "<@Yellow>",
           "You should continue entering the completion name you want to remove.\n",
-          "You can enter more names, separated by spaces."
+          "You can enter more names, and they will be returned in sequence."
         ]
       },
       "example": [
@@ -2695,7 +2717,7 @@
         "min": [
           "<@Yellow>",
           "You should continue to enter the name of the completion you want to find the storage location for.\n",
-          "You can enter more names, separated by spaces."
+          "You can enter more names, and they will be returned in sequence."
         ]
       },
       "example": [
