--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -219,6 +219,14 @@
       ]
     },
     {
+      "name": "info",
+      "tip": [
+        "获取补全信息(一个或多个)。",
+        "{{ $info.info.example }}"
+      ],
+      "next": []
+    },
+    {
       "name": "list",
       "tip": [
         "显示已经添加的补全。",
@@ -2172,7 +2180,7 @@
         "min": [
           "<@Yellow>",
           "你应该继续输入要添加的补全名称\n",
-          "你可以输入多个补全名称, 以空格分隔, 会依次添加"
+          "你可以输入多个补全名称, 会依次添加"
         ],
         "no": [
           "<@Red>补全 <@Magenta>{{ $completion }}<@Red> 在补全列表文件中不存在。\n",
@@ -2418,6 +2426,20 @@
         "<@Red>它包含了通配符"
       ]
     },
+    "info": {
+      "err": {
+        "min": [
+          "<@Yellow>",
+          "你应该继续输入要获取信息的补全名称\n",
+          "你可以输入多个补全名称, 它们会依次返回"
+        ]
+      },
+      "example": [
+        "E: psc info git           --- 返回 git 补全的相关信息\n",
+        "   psc info git scoop     --- 返回 git 和 scoop 补全的相关信息"
+      ],
+      "tip": "获取补全信息: {{ $completion }}"
+    },
     "list": {
       "added": "已添加",
       "example": [
@@ -2590,7 +2612,7 @@
         "min": [
           "<@Yellow>",
           "你应该继续输入要移除的补全名称\n",
-          "你可以输入多个补全名称, 以空格分隔, 会依次移除"
+          "你可以输入多个补全名称, 会依次移除"
         ]
       },
       "example": [
@@ -2691,7 +2713,7 @@
         "min": [
           "<@Yellow>",
           "你应该继续输入要查找存储位置的补全名称\n",
-          "你可以输入多个补全名称, 以空格分隔, 会依次返回补全文件的存储位置"
+          "你可以输入多个补全名称, 它们会依次返回"
         ]
       },
       "example": [
