feat(completions): update jj

--- a/completions/jj/language/en-US.json
+++ b/completions/jj/language/en-US.json
@@ -1293,6 +1293,36 @@
       "name": "next",
       "tip": [
         "Move the working-copy commit to the child revision"
+      ],
+      "options": [
+        {
+          "name": "--conflict",
+          "tip": [
+            "Jump to the next conflicted descendant"
+          ]
+        },
+        {
+          "name": "-e",
+          "alias": [
+            "--edit"
+          ],
+          "tip": [
+            "U: -e, --edit",
+            "Instead of creating a new working-copy commit on top of the target commit (like `jj new`), edit the target commit directly (like `jj edit`)",
+            "Takes precedence over config in `ui.movement.edit`; i.e. will negate `ui.movement.edit = false`"
+          ]
+        },
+        {
+          "name": "-n",
+          "alias": [
+            "--no-edit"
+          ],
+          "tip": [
+            "U: -n, --no-edit",
+            "The inverse of `--edit`",
+            "Takes precedence over config in `ui.movement.edit`; i.e. will negate `ui.movement.edit = true`"
+          ]
+        }
       ]
     },
     {
@@ -1871,6 +1901,44 @@
       "name": "workspace",
       "tip": [
         "Commands for working with workspaces"
+      ],
+      "next": [
+        {
+          "name": "add",
+          "tip": [
+            "Add a workspace"
+          ]
+        },
+        {
+          "name": "forget",
+          "tip": [
+            "Stop tracking a workspace's working-copy commit in the repo"
+          ]
+        },
+        {
+          "name": "list",
+          "tip": [
+            "List workspaces"
+          ]
+        },
+        {
+          "name": "rename",
+          "tip": [
+            "Renames the current workspace"
+          ]
+        },
+        {
+          "name": "root",
+          "tip": [
+            "Show the workspace root directory"
+          ]
+        },
+        {
+          "name": "update-stale",
+          "tip": [
+            "Update a workspace that has become stale"
+          ]
+        }
       ]
     }
   ],
