--- a/completions/jj/language/zh-CN.json
+++ b/completions/jj/language/zh-CN.json
@@ -1294,6 +1294,36 @@
       "name": "next",
       "tip": [
         "将工作副本提交移动到子修订"
+      ],
+      "options": [
+        {
+          "name": "--conflict",
+          "tip": [
+            "跳转至下一个冲突的后代"
+          ]
+        },
+        {
+          "name": "-e",
+          "alias": [
+            "--edit"
+          ],
+          "tip": [
+            "U: -e, --edit",
+            "不像 `jj new` 那样在目标提交之上创建一个新的工作副本提交，而是直接编辑目标提交（类似 `jj edit`）",
+            "优先于 `ui.movement.edit` 中的配置；也就是说，它会否定 `ui.movement.edit = false`"
+          ]
+        },
+        {
+          "name": "-n",
+          "alias": [
+            "--no-edit"
+          ],
+          "tip": [
+            "U: -n, --no-edit",
+            "与 `--edit` 相反",
+            "优先于 `ui.movement.edit` 中的配置；也就是说，它会否定 `ui.movement.edit = true`"
+          ]
+        }
       ]
     },
     {
@@ -1872,6 +1902,44 @@
       "name": "workspace",
       "tip": [
         "管理工作区"
+      ],
+      "next": [
+        {
+          "name": "add",
+          "tip": [
+            "添加一个工作区"
+          ]
+        },
+        {
+          "name": "forget",
+          "tip": [
+            "停止跟踪仓库中工作区的工作副本提交"
+          ]
+        },
+        {
+          "name": "list",
+          "tip": [
+            "列出工作区"
+          ]
+        },
+        {
+          "name": "rename",
+          "tip": [
+            "重命名当前工作区"
+          ]
+        },
+        {
+          "name": "root",
+          "tip": [
+            "显示当前工作区的根目录"
+          ]
+        },
+        {
+          "name": "update-stale",
+          "tip": [
+            "更新一个已过期的工作区"
+          ]
+        }
       ]
     }
   ],
